# demo-core-repo

./: LICENSE  README.md  metadata.yaml
common/: pyproject.toml
demo-one/: README.md  actions.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
demo-one/src/: demo_one.py
demo-one/tests/integration/: test_charm.py
demo-one/tests/unit/: test_charm.py
src/: charm.py
